# cosmicshear

./: README.md  pyproject.toml
.github/workflows/: test.yml
cosmicshear/: __init__.py  _ellipticity.py
docs/: conf.py  ellipticity.rst  index.rst
tests/: test_ellipticity.py
