[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cosmicshear"
description = "Utility functions for cosmic shear in astronomy"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
]
maintainers = [
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "furo",
    "sphinxcontrib.katex",
]
test = [
    "galsim",
    "numpy>2",
    "pytest",
    "scipy",
]

[project.urls]
repository = "https://github.com/ntessore/cosmicshear"

[tool.hatch]
version.source = "vcs"
